--- a/solution.ipynb
+++ b/solution.ipynb
@@ -172,7 +172,7 @@
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests) (3.10)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests) (2.2.3)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests) (2024.8.30)\n",
-            "Please enter your GitHub Personal Access Token: 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\n",
+            "Please enter your GitHub Personal Access Token: \n",
             "Data scraping complete! CSV files generated.\n"
           ]
         },
